--- a/src/assets/components/_card.scss
+++ b/src/assets/components/_card.scss
@@ -4,12 +4,17 @@
     max-width: 100%;
   }
 
-  .primary-image {
-    height: 300px;
-  }
+  //   .primary-image {
+  //     height: 300px;
+  //   }
 
   .images {
     height: 150px;
     margin-right: 5px; /* 加點邊距 */
   }
+}
+
+.card-title {
+  display: flex;
+  align-items: center;
 }
